# stephanie

./: #test#  .gitignore  .gitmodules  Cargo.toml  README.md  build.rs  build_for_windows.sh  run_normal.sh  run_perf.sh  run_with_fpe.sh
enemies/: enemies.json
enum_amount/: Cargo.toml
enum_amount/src/: lib.rs
furnitures/: furnitures.json
info/: crafts.json  enemies.json  furnitures.json  tiles.json
items/: items.json  loot.scm
lisp/: console.scm  door_loot.scm  infos.scm  items.scm  loot.scm  standard.scm
shaders/: character.frag  clear.vert  default.frag  default.vert  default_shaded.frag  final.frag  final.vert  light.frag  light.vert  menu_background.frag  mouse.frag  occluder.frag  occluder.vert  shadow.frag  shadow.vert  sky_light.frag  sky_light.vert  textured.frag  ui.frag  ui_fill.frag  with_mix.glsl  with_mix_simple.glsl  world.frag  world_shaded.frag  world_shaded.vert
src/: app.rs  client.rs  common.rs  debug_config.rs  extra_common.rs  float_helper.cpp  lib.rs  main.rs  main_menu.rs  rendering.rs  server.rs  settings.rs  shaders.rs  srgb_to_linear.hs  verbose_finder.hs  window.rs
src/app/: client.rs  common.rs  config.rs  server.rs
src/client/: connections_handler.rs  game.rs  game_state.rs  sliced_texture.rs  tiles_factory.rs  ui_common.rs  visibility_checker.rs  world_receiver.rs
src/common/: anatomy.rs  animation_common.rs  character.rs  characters_info.rs  chunk_saver.rs  clothing.rs  collider.rs  colors.rs  crafting.rs  damage.rs  damaging.rs  door.rs  drug.rs  enemies_info.rs  enemy.rs  enemy_creator.rs  entity.rs  entity_type.rs  furniture_creator.rs  furnitures_info.rs  generic_info.rs  health.rs  inventory.rs  item.rs  items_info.rs  joint.rs  lazy_mix.rs  lazy_transform.rs  light.rs  lisp.rs  loot.rs  message.rs  network_entity.rs  physics.rs  (+16 more)
tiles/: tiles.json
world_generation/: city.json  default.scm  ground.json  surface.json  underground.json
world_generation_test/: city.json  default.scm  surface.json  underground.json
(+202 files in other folders)
