[package]
name = "stephanie"
version = "0.1.0"
edition = "2021"

[dependencies]
yanyaengine = { path = "yanyaengine" }
bincode = "1.3.3"
bytemuck = "1.12.3"
image = "0.24.5"
nalgebra = { version = "0.32.1", features = ["serde-serialize-no-std"] }
parking_lot = { version = "0.12.1", default_features = false }
serde = "1.0.152"
serde_derive = "1.0.152"
vulkano = "0.34"
vulkano-shaders = "0.34"
serde_json = "1.0.94"
fastrand = "1.9.0"
argparse = "0.2.2"
strum = "0.24.1"
strum_macros = "0.24.3"
rust-lzma = "0.6.0"

[profile.dev]
opt-level = 1

[profile.release]
panic = "abort"

[profile.release-debug]
inherits = "release"
debug = true
