[package]
name = "stephanie"
version = "0.1.0"
edition = "2021"

[dependencies]
yanyaengine = { path = "yanyaengine" }
bytemuck = "1.12"
image = "0.24"
nalgebra = { version = "0.32", features = ["serde-serialize-no-std"] }
parking_lot = { version = "0.12", default-features = false }
serde = "1.0"
serde_derive = "1.0"
vulkano = "0.34"
vulkano-shaders = "0.34"
serde_json = "1.0"
fastrand = "1.9"
strum = { version = "0.26", features = ["derive"] }
rust-lzma = "0.6"
bincode = "1.3"
clipboard = "0.5"

[profile.dev]
opt-level = 1

[profile.release-debug]
inherits = "release"
debug = true
