[package]
name = "stephanie"
version = "0.1.0"
edition = "2021"

[dependencies]
yanyaengine = { path = "yanyaengine" }
bytemuck = "1.23"
image = "0.25"
nalgebra = { version = "0.33", features = ["serde-serialize-no-std"] }
parking_lot = { version = "0.12", default-features = false }
serde = "1.0"
serde_derive = "1.0"
vulkano = "0.35"
vulkano-shaders = "0.35"
serde_json = "1.0"
fastrand = "2.3"
strum = { version = "0.27", features = ["derive"] }
rust-lzma = "0.6"
bincode = { version = "2.0", features = ["serde"] }
clipboard = "0.5"

[profile.dev]
opt-level = 1

[profile.release-debug]
inherits = "release"
debug = true
